syntax = "proto3";
package proto;

option go_package = "github.com/spinnaker/kleat/api/client";

import "clouddriver.proto";
import "echo.proto";
import "front50.proto";

message ServiceConfigs {
  ClouddriverConfig clouddriver = 1;
  EchoConfig echo = 2;
  Front50Config front50 = 3;
}
